--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
         environment:
             - POSTGRES_DB=library_db
             - POSTGRES_PASSWORD=password
+        volumes:
+            - postgres:/var/lib/postgresql/data
     django:
         build:
             context: .
@@ -25,3 +27,8 @@ services:
         container_name: react
         depends_on:
             - django
+        ports:
+            - 3000:3000
+
+volumes:
+    postgres:
