--- a/library_front/Dockerfile
+++ b/library_front/Dockerfile
@@ -1,8 +1,10 @@
 FROM node:18
 
-COPY library_front/ /
+COPY library_front/ /app
+WORKDIR /app
+
 RUN npm install
 
-WORKDIR /src
-
-CMD ["npm", "start"]
+COPY entrypoint.sh .
+ENTRYPOINT ["/bin/sh", "entrypoint.sh"]
+CMD ["run-front", "react-debug"]
