--- a/library_nginx/nginx.conf
+++ b/library_nginx/nginx.conf
@@ -2,27 +2,13 @@ upstream app {
     server react:3000;
 }
 
-upstream api {
-    server django:5000;
-}
-
 server {
     listen 80;
 
     location / {
-        # root  /app/library_front/build;
-        # index index.html;
-        proxy_pass http://app;
+        proxy_pass       http://app;
+        proxy_redirect   off;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
     }
-
-    location /api {
-        proxy_pass       http://api;
-        # proxy_redirect   off;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header Host $host;
-    }
-
-    # location /django-static/ {
-    #     alias /var/www/library_back/static;
-    # }
 }
