--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,26 @@ jobs:
         with:
           key: library_back
           path: docker_image_${{ github.sha }}
+
+  test:
+    name: test / unity
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Check out code from Github
+        uses: actions/checkout@v3
+      - name: Restoring cached image
+        uses: actions/cache@v3
+        with:
+          key: library_back
+          path: docker_image_${{ github.sha }}
+      - name: Running django container
+        env:
+          IMAGE_BACK: back/django:${{ github.sha }}
+        run: |
+          cp library_back/.env-sample library_back/.env
+          docker load -i docker_image_$GITHUB_SHA
+          docker-compose -f docker-compose.ci.yml -p back_$GITHUB_SHA up --no-build -d django
+      - name: Running users tests
+        run: |
+          docker exec back_${{ github.sha }}_django_1 pytest library_back
