--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ djangorestframework==3.13.1
 gunicorn==20.1.0
 psycopg2==2.9.3
 pycparser==2.21
+pytest-django==4.5.2
+pytest==7.1.2
 python-dotenv==0.20.0
 pytz==2022.1
 sqlparse==0.4.2
