--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,10 +1,22 @@
 version: '3'
 services:
+    postgres:
+        image: postgres:latest
+        environment:
+            - POSTGRES_DB=library_db
+            - POSTGRES_PASSWORD=password
+        volumes:
+            - postgres:/var/lib/postgresql/data
     django:
-        image: "{$IMAGE_BACK}"
+        image: "${IMAGE_BACK}"
         environment:
             - DJANGO_SETTINGS_MODULE=src.settings
+        depends_on:
+            - postgres
         ports:
             - 5000:8000
         volumes:
             - .:/var/www
+
+volumes:
+    postgres:
