--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Check out code from Github
         uses: actions/checkout@v3
-      - name: Set up Python 3.10
+      - name: Set up Node 18
         uses: actions/setup-node@v3
         with:
           node-version: "18"
@@ -21,3 +21,20 @@ jobs:
         working-directory: ./library_front
         run: |
           npx eslint src/
+
+  build:
+    name: run / build
+    runs-on: ubuntu-latest
+    needs: linter
+    steps:
+      - name: Check out code from Github
+        uses: actions/checkout@v3
+      - name: Build image
+        run: |
+          docker build . -f library_front/Dockerfile -t front/react:$GITHUB_SHA
+          docker save -o docker_image_$GITHUB_SHA front/react:$GITHUB_SHA
+      - name: Caching image
+        uses: actions/cache@v3
+        with:
+          key: library_front
+          path: docker_image_${{ github.sha }}
