--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -38,3 +38,25 @@ jobs:
         with:
           key: library_front
           path: docker_image_${{ github.sha }}
+
+  test:
+    name: test / unity
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Check out code from Github
+        uses: actions/checkout@v3
+      - name: Restoring cached image
+        uses: actions/cache@v3
+        with:
+          key: library_front
+          path: docker_image_${{ github.sha }}
+      - name: Running react container
+        env:
+          IMAGE_FRONT: front/react:${{ github.sha }}
+        run: |
+          docker load -i docker_image_$GITHUB_SHA
+          docker-compose -f docker-compose.ci.yml -p front_$GITHUB_SHA up --no-build -d react
+      - name: Running react tests
+        run: |
+          docker exec front_${{ github.sha }}_react_1 npm test
