--- a/.env-sample
+++ b/.env-sample
@@ -1,6 +1,9 @@
 # Copie as informações aqui escritas para um arquivo nomeado .env
 # Edite as variáveis como for necessário para conectar à sua instância do banco
 
+SECRET_KEY=chavesecreta
+DEBUG=true
+
 POSTGRES_DB=library_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
