--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -9,6 +9,7 @@ services:
             - postgres:/var/lib/postgresql/data
     django:
         image: "${IMAGE_BACK}"
+        command: run-back django-debug
         environment:
             - DJANGO_SETTINGS_MODULE=src.settings
         depends_on:
