--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,5 +14,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Heroku push
         run: |
-          git push https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git \
-            `git subtree split --prefix library_back origin`:main --force
+          git push -f https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/${{ secrets.HEROKU_APP_NAME }}.git main
