--- a/library_back/Dockerfile
+++ b/library_back/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /var/www
-COPY library_back/ /var/www
+COPY . /var/www
 
 RUN pip install --no-cache-dir -r requirements.txt
 
