--- a/.github/workflows/back-ci.yml
+++ b/.github/workflows/back-ci.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build image
         run: |
-          docker build . -f library_back/Dockerfile -t back/django:$GITHUB_SHA
+          docker build library_back -f library_back/Dockerfile -t back/django:$GITHUB_SHA
           docker save -o docker_image_$GITHUB_SHA back/django:$GITHUB_SHA
       - name: Caching image
         uses: actions/cache@v3
