--- a/.github/workflows/front-ci.yml
+++ b/.github/workflows/front-ci.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Build image
         run: |
-          docker build . -f library_front/Dockerfile -t front/react:$GITHUB_SHA
+          docker build library_front -f library_front/Dockerfile -t front/react:$GITHUB_SHA
           docker save -o docker_image_$GITHUB_SHA front/react:$GITHUB_SHA
       - name: Caching image
         uses: actions/cache@v3
