--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
             - postgres:/var/lib/postgresql/data
     django:
         build:
-            context: .
-            dockerfile: library_back/Dockerfile
+            context: library_back
+            dockerfile: Dockerfile
         container_name: django
         command: run-back django-debug
         environment:
@@ -24,8 +24,8 @@ services:
             - static_django:/var/www/library_back/static
     react:
         build:
-            context: .
-            dockerfile: library_front/Dockerfile
+            context: library_front
+            dockerfile: Dockerfile
         container_name: react
         depends_on:
             - django
