--- a/library_front/Dockerfile
+++ b/library_front/Dockerfile
@@ -4,7 +4,4 @@ WORKDIR /app
 COPY . /app
 
 RUN npm install
-
-COPY entrypoint.sh .
-ENTRYPOINT ["/bin/sh", "entrypoint.sh"]
-CMD ["run-front", "react-start"]
+CMD ["npm", "start"]
